Use pointer cursor for button

--- a/options.html
+++ b/options.html
@@ -74,6 +74,7 @@
             margin-top: 1em;
             color: white;
             background-color: #77b11c;
+            cursor: pointer;
         }
 
         #status {
