--- a/options.html
+++ b/options.html
@@ -94,6 +94,7 @@
         <h2>Youtube Auto Pause</h2>
         <label><input type="checkbox" id="autopause"><span class="label-text">Enable auto pause on tab unfocus</span></label>
         <label><input type="checkbox" id="autoresume"><span class="label-text">Enable auto resume on tab focus</span></label>
+        <label><input type="checkbox" id="scrollpause"><span class="label-text">Enable auto pause when out of viewport</span></label>
         <div id="status"></div>
         <button id="save">Save</button>
     </div>
