feat: allow global pause/play via extension

--- a/options.html
+++ b/options.html
@@ -5,18 +5,10 @@
     <title>Youtube Auto Pause options</title>
     <style>
         @charset "UTF-8";
-        @import 'https://fonts.googleapis.com/css?family=Nunito:300,400,700';
-
-		@font-face {
-		  font-family: 'Nunito';
-		  font-style: normal;
-		  font-weight: 300;
-		  src: url(Nunito.woff2) format('woff2');
-		  unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
-		}
+        @import 'https://fonts.googleapis.com/css?family=Nunito:400';
 
         body {
-            padding: 20px;
+            padding: 10px;
             padding-top: 5px;
             font-family: "Nunito", sans-serif;
             font-weight: 400;
@@ -78,7 +70,8 @@
         <button id="save">Save</button>
 		<h4>Hotkeys</h4>
 		<p>Ctrl/Cmd+Shift+P - Disable/enable extension</p>
-    </div>
+		<p>Ctrl/Cmd+Shift+Space - Toggle play/pause<p>
+	</div>
     <script src="options.js"></script>
 </body>
 
