feat: add shortcut to toggle mute of videos

--- a/options.html
+++ b/options.html
@@ -71,6 +71,7 @@
 		<h4>Hotkeys</h4>
 		<p>Ctrl/Cmd+Shift+P - Disable/enable extension</p>
 		<p>Ctrl/Cmd+Shift+Space - Toggle play/pause<p>
+		<p>Ctrl/Cmd+Shift+O - Toggle mute</p>
 	</div>
     <script src="options.js"></script>
 </body>
