feat: refactor the options menu

--- a/options.html
+++ b/options.html
@@ -9,7 +9,7 @@
 
         body {
             padding: 10px;
-            padding-top: 5px;
+            padding-top: 0px;
             font-family: "Nunito", sans-serif;
             font-weight: 400;
         }
@@ -22,51 +22,24 @@
             font-size: 1.2em;
         }
 
-        @keyframes tick {
-            0% {
-                transform: scale(0);
-            }
+		h2 {
+			font-size: 20px;
+		}
 
-            90% {
-                transform: scale(1.3);
-            }
-
-            100% {
-                transform: scale(1);
-            }
-        }
-
-        button {
-            display: inline-block;
-            text-decoration: none;
-            padding: 0.5em 1em;
-            border: 0;
-            margin-top: 1em;
-            color: white;
-            background-color: #77b11c;
-            cursor: pointer;
-        }
-
-        #status {
-            position: fixed;
-            padding: 10px;
-            top: 0;
-            right: 0;
-            text-align: right;
-            color: green;
-            font-size: 1.3em;
-        }
+		#logo {
+			margin-right: 6px;
+			margin-left: 3px;
+		}
     </style>
 </head>
 
 <body>
     <div style="width: 300px">
-        <h2>Youtube Auto Pause</h2>
+		<h2><img src="images/icon_16.png" id="logo"></img>Youtube Auto Pause</h2>
         <label><input type="checkbox" id="autopause"><span class="label-text">Enable auto pause on tab unfocus</span></label>
         <label><input type="checkbox" id="autoresume"><span class="label-text">Enable auto resume on tab focus</span></label>
         <label><input type="checkbox" id="scrollpause"><span class="label-text">Enable auto pause when out of viewport</span></label>
         <label><input type="checkbox" id="disabled"><span class="label-text">Disable extension</span></label>
-        <div id="status"></div>
 		<h4>Hotkeys</h4>
 		<p>Ctrl/Cmd+Shift+P - Disable/enable extension</p>
 		<p>Ctrl/Cmd+Shift+Space - Toggle play/pause<p>
