--- a/options.html
+++ b/options.html
@@ -39,7 +39,7 @@
         <label><input type="checkbox" id="autopause"><span class="label-text">Enable auto pause on tab unfocus</span></label>
         <label><input type="checkbox" id="autoresume"><span class="label-text">Enable auto resume on tab focus</span></label>
         <label><input type="checkbox" id="scrollpause"><span class="label-text">Enable auto pause when out of viewport</span></label>
-        <label><input type="checkbox" id="disabled"><span class="label-text">Disable extension</span></label>
+        <label><input type="checkbox" id="disabled"><span class="label-text">Disable auto pause/resume</span></label>
 		<h4>Hotkeys</h4>
 		<p>Ctrl/Cmd+Shift+P - Disable/enable extension</p>
 		<p>Ctrl/Cmd+Shift+Space - Toggle play/pause<p>
