fix: better description for hotkey

--- a/options.html
+++ b/options.html
@@ -41,7 +41,7 @@
         <label><input type="checkbox" id="scrollpause"><span class="label-text">Enable auto pause when out of viewport</span></label>
         <label><input type="checkbox" id="disabled"><span class="label-text">Disable auto pause/resume</span></label>
 		<h4>Hotkeys</h4>
-		<p>Ctrl/Cmd+Shift+P - Disable/enable extension</p>
+		<p>Ctrl/Cmd+Shift+P - Toggle auto pause/resume</p>
 		<p>Ctrl/Cmd+Shift+Space - Toggle play/pause<p>
 		<p>Ctrl/Cmd+Shift+O - Toggle mute</p>
 	</div>
