feat: allow pause/resume on window focus change

--- a/options.html
+++ b/options.html
@@ -65,6 +65,8 @@
 			<h4>Settings</h4>
 	        <label><input type="checkbox" id="autopause"><span class="label-text">Enable auto pause on tab unfocus</span></label>
     	    <label><input type="checkbox" id="autoresume"><span class="label-text">Enable auto resume on tab focus</span></label>
+        	<label><input type="checkbox" id="focuspause"><span class="label-text">Enable auto pause on window unfocus</span></label>
+        	<label><input type="checkbox" id="focusresume"><span class="label-text">Enable auto resume on window focus</span></label>
         	<label><input type="checkbox" id="lockpause"><span class="label-text">Enable auto pause on computer lock</span></label>
         	<label><input type="checkbox" id="lockresume"><span class="label-text">Enable auto resume on computer unlock</span></label>
         	<label><input type="checkbox" id="scrollpause"><span class="label-text">Enable auto pause when out of viewport</span></label>
