feat: allow selecting hosts where to run the extension

--- a/options.html
+++ b/options.html
@@ -73,6 +73,10 @@
         	<label><input type="checkbox" id="disabled"><span class="label-text">Disable auto pause/resume</span></label>
 		</div>
 		<hr>
+		<div class="container" id="hosts">
+			<h4>Enabled sites</h4>
+		</div>
+		<hr>
 		<div class="container">
 			<h4>Hotkeys</h4>
 			<div id="hotkeys">
