chore: add support links to options

--- a/options.html
+++ b/options.html
@@ -88,6 +88,11 @@
 			<p style="float: left;"><a href="https://github.com/drodil/youtube_auto_pause" target="_blank">Source</a></p>
 			<p id="version"></p>
 		</div>
+		<hr style="clear: both">
+		<div class="container" style="padding-top: 0">
+			<p style="float: left"><a href="https://github.com/sponsors/drodil" target="_blank">Support on GitHub</a></p>
+			<p style="float: right"><a href="https://patreon.com/drodil" target="_blank">Support on Patreon</a></p>
+		</div>
 	</div>
     <script src="options.js"></script>
 </body>
