Added option buttons and logic for enabling/disabling cursor tracking to track intent to move to different window/monitor

--- a/options.html
+++ b/options.html
@@ -96,7 +96,8 @@
         	<label><input type="checkbox" id="lockpause"><span class="label-text">Enable auto pause on computer lock</span></label>
         	<label><input type="checkbox" id="lockresume"><span class="label-text">Enable auto resume on computer unlock</span></label>
         	<label><input type="checkbox" id="scrollpause"><span class="label-text">Enable auto pause when out of viewport</span></label>
-        	<label><input type="checkbox" id="disabled"><span class="label-text">Disable auto pause/resume</span></label>
+        	<label><input type="checkbox" id="disabled"><span class="label-text">Disable auto pause/resume</span></label>	
+			<label><input type="checkbox" id="cursorTracking"><span class="label-text">Enable cursor on window tracking</span></label>
 		</div>
 		<hr>
 		<div class="container">
