multiple fixes and debug mode

--- a/options.html
+++ b/options.html
@@ -96,8 +96,9 @@
         	<label><input type="checkbox" id="lockpause"><span class="label-text">Enable auto pause on computer lock</span></label>
         	<label><input type="checkbox" id="lockresume"><span class="label-text">Enable auto resume on computer unlock</span></label>
         	<label><input type="checkbox" id="scrollpause"><span class="label-text">Enable auto pause when out of viewport</span></label>
-        	<label><input type="checkbox" id="disabled"><span class="label-text">Disable auto pause/resume</span></label>	
 			<label><input type="checkbox" id="cursorTracking"><span class="label-text">Enable cursor on window tracking</span></label>
+			<label><input type="checkbox" id="manualPause"><span class="label-text">Manual pause disables auto resume</span></label>
+			<label><input type="checkbox" id="disabled"><span class="label-text">Disable auto pause/resume</span></label>
 		</div>
 		<hr>
 		<div class="container">
@@ -106,6 +107,8 @@
 		        <div id="hosts">
      	     		<h4>Enabled sites</h4>
 	        	</div>
+				<h4>Other settings</h4>
+				<label><input type="checkbox" id="debugMode"><span class="label-text">Enable debug mode</span></label>
 			</div>
 		</div>
 		<hr>
