fix: tune heading of options

--- a/options.html
+++ b/options.html
@@ -33,6 +33,7 @@
 		h2 {
 			font-size: 20px;
 			text-align: center;
+			user-select: none;
 		}
 
 		h4, hr, h2 {
@@ -42,6 +43,9 @@
 		#logo {
 			margin-right: 6px;
 			margin-left: 3px;
+			width: 22px;
+			height: 22px;
+			vertical-align: sub;
 		}
 
 		#version {
@@ -84,7 +88,7 @@
 <body>
     <div style="width: 350px">
 		<div class="container">
-			<h2><img src="images/icon_16.png" id="logo"></img>Youtube Auto Pause</h2>
+			<h2><img src="images/icon_32.png" id="logo" alt="YouTube Auto Pause"/>YouTube Auto Pause</h2>
 		</div>
 		<hr>
 		<div class="container">
