feat: allow enabling/disabling for single tab

--- a/src/options.html
+++ b/src/options.html
@@ -102,6 +102,7 @@
         	<label><input type="checkbox" id="scrollpause"><span class="label-text">Enable auto pause when out of viewport</span></label>
 			<label><input type="checkbox" id="cursorTracking"><span class="label-text">Enable cursor on window tracking</span></label>
 			<label><input type="checkbox" id="manualPause"><span class="label-text">Manual pause disables auto resume</span></label>
+			<label><input type="checkbox" id="disabledTabs"><span class="label-text">Disable on this tab</span></label>
 			<label><input type="checkbox" id="disableOnFullscreen"><span class="label-text">Disable on full screen</span></label>
 			<label><input type="checkbox" id="disabled"><span class="label-text">Disable extension</span></label>
 		</div>
