fix: rename to video auto pause due to trademark

--- a/src/options.html
+++ b/src/options.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Youtube Auto Pause options</title>
+    <title>Video Auto Pause options</title>
     <style>
         @charset "UTF-8";
         @import 'https://fonts.googleapis.com/css?family=Nunito:300';
@@ -88,7 +88,7 @@
 <body>
     <div style="width: 350px">
 		<div class="container">
-			<h2><img src="images/icon_32.png" id="logo" alt="YouTube Auto Pause"/>YouTube Auto Pause</h2>
+			<h2><img src="images/icon_32.png" id="logo" alt="Video Auto Pause"/>Video Auto Pause</h2>
 		</div>
 		<hr>
 		<div class="container">
@@ -126,7 +126,7 @@
 		</div>
 		<hr>
 		<div class="container" style="padding-top: 0">
-			<p style="float: left;"><a href="https://github.com/drodil/youtube_auto_pause" target="_blank">Source</a></p>
+			<p style="float: left;"><a href="https://github.com/drodil/video_auto_pause" target="_blank">Source</a></p>
 			<p id="version"></p>
 		</div>
 		<hr style="clear: both">
